Back to 8 and use Arrays